# Bugza

./: .env.example  .gitignore  DockerFile  README.md  database_url_format.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini
.github/workflows/: run_tests.yml
alembic/: env.py
alembic/versions/: 0b9400bc32c5_change_opener_id_label_to_creator_id.py  5ab29d80ef60_add_date_created_field_to_ticket.py  70ae970d2b67_add_date_created_field_to_comments.py  cec07567f068_create_database.py
app/: __init__.py  connection_manager.py
app/api/: __init__.py
app/api/dependencies/: ConnectionManager.py  __init__.py  graphql.py  oauth.py
app/api/router/: __init__.py  auth.py  graphql.py  project.py  ticket.py
app/data/: __init__.py
app/data/entities/: __all_entities__.py  __init__.py  comments.py  project.py  ticket.py  user.py
app/data/enum/: __init__.py  roles.py  ticket_state.py  ticket_type.py
app/data/schema/gaphql/: __init__.py  comment.py  project.py  query.py  ticket.py  user.py
app/data/schema/pydantic/: __init__.py  comment.py  project.py  ticket.py  token.py  user.py
app/data/usecases/: __init__.py
app/data/usecases/getters/: __init__.py  get_comment.py  get_project.py  get_ticket.py  get_user.py
app/data/usecases/graphql/: __init__.py
app/exception/: __init__.py
app/utils/: __init__.py  constants.py
app/utils/security/: __init__.py  jwt.py
tests/: __init__.py  conftest.py  test_auth_touter.py  test_graphql_router.py  test_jwt.py  test_project_router.py  test_ticket_router.py
tests/database/: __init__.py
(+4 files in other folders)
