[tool.poetry]
name = "Bugza_Backend"
version = "0.1.0"
description = "Backend system of Bugza - A bug tracking system"
authors = ["Owusu Kelvin Clark <kelvinclark2k77@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.73.0"
SQLAlchemy = "^1.4.31"
strawberry-graphql = {extras = ["fastapi"], version = "^0.95.1"}
python-dotenv = "^0.19.2"
alembic = "^1.7.5"
aiomysql = "^0.0.22"
passlib = "^1.7.4"
python-multipart = "^0.0.5"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
uvicorn = {extras = ["standard"], version = "^0.17.1"}
aiosqlite = "^0.17.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-asyncio = "^0.17.2"
httpx = "^0.22.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
